--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -105,23 +105,29 @@
             android:id="@+id/settingBtn"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginTop="652dp"
+            android:layout_marginTop="600dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/setting"
+            app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintEnd_toStartOf="@+id/messageBtn"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/messageBtn"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginTop="652dp"
+            android:layout_marginTop="600dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
+            android:layout_marginBottom="34dp"
             android:background="@drawable/message"
+            app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintEnd_toStartOf="@+id/joBtn"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/joBtn"
@@ -129,7 +135,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="164dp"
             android:layout_marginLeft="164dp"
-            android:layout_marginTop="632dp"
+            android:layout_marginTop="570dp"
             android:background="@drawable/jo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -138,23 +144,29 @@
             android:id="@+id/noticeBtn"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="652dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="600dp"
+            android:layout_marginBottom="34dp"
             android:background="@drawable/notice"
+            app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintStart_toEndOf="@+id/joBtn"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/collectBtn"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginStart="18dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="652dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="600dp"
+            android:layout_marginBottom="34dp"
             android:background="@drawable/collection"
+            app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintStart_toEndOf="@+id/noticeBtn"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
