--- a/app/src/main/res/drawable/shape_textviewlogin.xml
+++ b/app/src/main/res/drawable/shape_textviewlogin.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 類型 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 顏色 -->
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/colorDrawer" />
     <!-- 文字與邊框的間距 -->
     <padding
         android:top="10dp"
@@ -16,7 +15,7 @@
     <!-- 邊框線 -->
     <stroke
         android:width="2dp"
-        android:color="#ffffff"
+        android:color="@color/colorDrawer"
         android:dashGap="0dp"
         android:dashWidth="0dp"/>
 </shape>
