--- a/app/src/main/res/layout/content_selfpage.xml
+++ b/app/src/main/res/layout/content_selfpage.xml
@@ -45,8 +45,8 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/user_name"
-                android:paddingTop="35dp"/>
+                android:paddingTop="35dp"
+                android:text="@string/user_name" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,7 +56,7 @@
 
                 <TextView
                     android:id="@+id/textView67"
-                    android:layout_width="10dp"
+                    android:layout_width="62dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/age" />
@@ -74,9 +74,9 @@
             android:id="@+id/button39"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/addfriend"
-            android:layout_gravity="center"/>
+            android:text="@string/addfriend" />
 
     </LinearLayout>
 
