--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -11,11 +11,12 @@
         android:orientation="horizontal"
         >
 
-        <de.hdodenhof.circleimageview.CircleImageView
+
+        <ImageView
             android:id="@+id/users_profile_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/head"/>
+            android:src="@drawable/head" />
 
 
         <LinearLayout
