--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorButton">#5b73d5</color>
     <color name="colorButtonText">#496176</color>
     <color name="colorChatButton">#FFFFFF</color>
+    <color name="colorGray">#D8D8D8</color>
 
 </resources>
