--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -25,6 +25,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
+        android:background="@drawable/receiver_messages_layout"
         android:layout_toRightOf="@+id/message_profile_image" />
 
 
@@ -54,12 +55,12 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
-
         android:text="sender messages"
         android:textSize="14sp"
         android:padding="10dp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
+        android:background="@drawable/sender_messages_layout"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
